<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_text"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites_text"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_text"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/account_text"
        android:orderInCategory="4"/>
</menu>